[#79] Beginning working on z-index issue.
Trying to find the highest z-index of page and then setting the z-indexes for the modal divs accordingly. Currently having trouble writing function that finds z-indexes.

--- a/client/components/ed/ed-modal/ed-modal.less
+++ b/client/components/ed/ed-modal/ed-modal.less
@@ -1,5 +1,6 @@
 .modal-container {
   display: none;
+  z-index: 9;
 }
 .modal-box {
   position: fixed;
